# obsidian-paprika

./: .gitignore  .gitmodules  README.md  esbuild.config.mjs  fetch_polyfill.ts  local.ts  main.ts  manifest.json  package.json  paprika.ts  settings.ts  ts_util.ts  tsconfig.json
rust/: Cargo.toml  LICENSE_MIT  README.md  template.md  tmp.md
rust/harness/: Cargo.toml
rust/harness/src/: local.rs  main.rs
rust/src/: handlebars_helpers.rs  lib.rs  local.rs  main.rs  paprika.rs
rust/src/lib/: handlebars_helpers.rs  lib.rs  mod.rs  paprika.rs
rust/tests/: example_categories.json  example_recipe.json
